--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <meta name="google-site-verification" content="wkYhxZr0kjQo4pNrLOaHGMRGrHiIr6WSd6nm7_o232I" />
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
 </head>
